added lazy loading for view components, fixed pipe bug, styled error page

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>CV Georgiy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Meine Webseite, auf welcher mein Werdegang sowie verschiedenste meiner Projekte und Skills ersichtlich sind">
+  <meta name=”robots” content="noindex, follow">
   <link rel="icon" type="image/svg+xml" href="assets/img/terminal.svg">
 </head>
 <body>
