added meta description, robots

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
   <title>CV Georgiy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Meine Webseite, auf welcher mein Werdegang sowie verschiedenste meiner Projekte und Skills ersichtlich sind">
+  <meta name="”robots”" content="noindex, follow">
   <link rel="icon" type="image/svg+xml" href="assets/img/terminal.svg">
 <style>*{box-sizing:border-box}body{margin:0;background-color:#232a2d}</style><link rel="stylesheet" href="styles.a8eeb50a5a67869d.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.a8eeb50a5a67869d.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.bcfbff6fe424e9f0.js" type="module"></script><script src="polyfills.d522f72ec6adfb58.js" type="module"></script><script src="main.887e2a8155925e27.js" type="module"></script>
+<script src="runtime.98594bdb84568558.js" type="module"></script><script src="polyfills.d522f72ec6adfb58.js" type="module"></script><script src="main.92534b01ead510d4.js" type="module"></script>
 
 </body></html>
