--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Meine Webseite, auf welcher mein Werdegang sowie verschiedenste meiner Projekte und Skills ersichtlich sind">
-  <meta name=”robots” content="noindex, follow">
+  <meta name="robots" content="noindex, follow">
   <link rel="icon" type="image/svg+xml" href="assets/img/terminal.svg">
 </head>
 <body>
