--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
+
 <head>
   <meta charset="utf-8">
   <title>CV Georgiy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Meine Webseite, auf welcher mein Werdegang sowie verschiedenste meiner Projekte und Skills ersichtlich sind">
+  <meta name="description"
+    content="Meine Webseite, auf welcher mein Werdegang sowie verschiedenste meiner Projekte und Skills ersichtlich sind">
   <meta name="robots" content="noindex, follow">
   <link rel="icon" type="image/svg+xml" href="assets/img/terminal.svg">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
