now it's the last time fr tho

--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,62 @@
 <!DOCTYPE html>
 <html lang="de">
+  <head>
+    <meta charset="utf-8" />
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="noindex, follow" />
+    <link rel="icon" type="image/svg+xml" href="assets/img/terminal.svg" />
 
-<head>
-  <meta charset="utf-8" />
-  <base href="/" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="robots" content="noindex, follow" />
-  <link rel="icon" type="image/svg+xml" href="assets/img/terminal.svg" />
+    <title>CV Georgiy</title>
+    <meta
+      name="description"
+      content="Meine Webseite, auf welcher mein Werdegang sowie verschiedenste meiner Projekte und Skills ersichtlich sind"
+    />
 
-  <title>CV Georgiy</title>
-  <meta name="description"
-    content="Meine Webseite, auf welcher mein Werdegang sowie verschiedenste meiner Projekte und Skills ersichtlich sind" />
+    <meta
+      property="og:url"
+      content="https://portfolio-shevoroshkin-georgiy.web.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="CV Georgiy" />
+    <meta
+      property="og:description"
+      content="Meine Webseite, auf welcher mein Werdegang sowie verschiedenste meiner Projekte und Skills ersichtlich sind"
+    />
+    <meta
+      property="og:image"
+      content="https://portfolio-shevoroshkin-georgiy.web.app/assets/content/profilepic_square.webp"
+    />
+    <meta property="og:image:width" content="1000" />
+    <meta property="og:image:height" content="1000" />
+    <meta
+      data-n-head="ssr"
+      data-hid="og:image:type"
+      property="og:image:type"
+      content="image/png"
+    />
 
-  <meta property="og:url" content="https://portfolio-shevoroshkin-georgiy.web.app/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="CV Georgiy" />
-  <meta property="og:description"
-    content="Meine Webseite, auf welcher mein Werdegang sowie verschiedenste meiner Projekte und Skills ersichtlich sind" />
-  <meta property="og:image"
-    content="https://portfolio-shevoroshkin-georgiy.web.app/assets/content/profilepic_square.webp" />
-  <meta property="og:image:width" content="1000" />
-  <meta property="og:image:height" content="1000" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:domain"
+      content="portfolio-shevoroshkin-georgiy.web.app"
+    />
+    <meta
+      property="twitter:url"
+      content="https://portfolio-shevoroshkin-georgiy.web.app/"
+    />
+    <meta name="twitter:title" content="CV Georgiy" />
+    <meta
+      name="twitter:description"
+      content="Meine Webseite, auf welcher mein Werdegang sowie verschiedenste meiner Projekte und Skills ersichtlich sind"
+    />
+    <meta
+      name="twitter:image"
+      content="https://portfolio-shevoroshkin-georgiy.web.app/assets/content/profilepic_square.webp"
+    />
+  </head>
 
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta property="twitter:domain" content="portfolio-shevoroshkin-georgiy.web.app" />
-  <meta property="twitter:url" content="https://portfolio-shevoroshkin-georgiy.web.app/" />
-  <meta name="twitter:title" content="CV Georgiy" />
-  <meta name="twitter:description"
-    content="Meine Webseite, auf welcher mein Werdegang sowie verschiedenste meiner Projekte und Skills ersichtlich sind" />
-  <meta name="twitter:image"
-    content="https://portfolio-shevoroshkin-georgiy.web.app/assets/content/profilepic_square.webp" />
-</head>
-
-<body>
-  <app-root></app-root>
-</body>
-
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
